--- a/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_top.jspf
@@ -24,9 +24,14 @@
 
   <!-- CK에디터 -->
   <!-- <script src="https://cdn.ckeditor.com/ckeditor5/29.1.0/classic/ckeditor.js"></script> -->
+  <!--
   <script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/decoupled-document/ckeditor.js"></script>
   <link rel="stylesheet" href="/resources/css/content-styles.css" type="text/css">
   <script src="https://cdn.ckeditor.com/ckeditor5/34.0.0/classic/translations/ko.js"></script>
+  -->
+  <!-- <link rel="stylesheet" type="text/css" href="/resources/plugins/ckBuild/styles.css"> -->
+  <link rel="stylesheet" href="/resources/css/content-styles.css" type="text/css">
+  <script src="/resources/plugins/ckBuild/ckeditor.js"></script>
   
   <!--2022-03-10 추가 -->	
   <style type="text/css">
