판매 종료된 작품 구매하기 버튼 삭제, 거래내역 전체에서 판매내역 안나오는 문제 수정, 1차, 2차 판매자 결제 수정

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -466,6 +466,9 @@ $(function() {
 	if(result.deal.dealTypCd == "A" && result.deal.dealSttsCd == "TP"){ //경매면
 		selectBoxWriteAskingPrice(); //자동으로 셀렉트박스와 호가단위에 호가를 입력해준다.
 	}
+	if(result.deal.dealSttsCd == "TC"){ //판매종료면
+		$("#btn_purchaseOrBid").css("display", "none");
+	}
 });
 /* 응찰 히스토리 */
 var bidDate = [];
