--- a/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
+++ b/src/main/resources/templates/thymeleaf/fo/myPage/myDeal_list.html
@@ -384,14 +384,24 @@ function myDealSearchList(){
         		for(var i=0; i<myDealList.length; i++){
     	        	myDealListHtml += '<div class="myd-box myd-mobile">';
     				myDealListHtml += '	<div class="myd-img">';
-    				myDealListHtml += '		<img src="'+ myDealList[i].workMainImgUrl+'" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)"/>';
+    				if(myDealList[i].sellMbrSq == sMbrSqVal){ //판매자이면
+    					myDealListHtml += '		<img src="'+ myDealList[i].workMainImgUrl+'" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailSell(this)"/>';
+    				}
+    				if(myDealList[i].buyMbrSq == sMbrSqVal){ //구매자이면
+    					myDealListHtml += '		<img src="'+ myDealList[i].workMainImgUrl+'" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailBuy(this)"/>';
+    				}
     				if(myDealList[i].dealTypCd == "A"){ //경매면 응찰 히스토리 버튼 추가
     					myDealListHtml += '		<button type="button" class="btns-4" onclick="bidHistory('+myDealList[i].dealSq+')">응찰 히스토리</button>';
     				}
     				if(myDealList[i].dealSttsCd == "TP" && myDealList[i].sellMbrSq == sMbrSqVal){ //거래중 이면서 판매자 본인 일 경우 거래 수정 버튼 추가
 						myDealListHtml += '		<button type="button" class="btns-4" dealTypCd="'+myDealList[i].dealTypCd+'" dealSq="'+myDealList[i].dealSq+'" dealAuctnPrc="'+myDealList[i].dealAuctnPrc+'" onclick="dealMod(this)">거래 중단 및 수정하기</button>';
 					}
-    				myDealListHtml += '		<button type="button" class="btns-4" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">거래 계약 안내 및 상세</button>';
+    				if(myDealList[i].sellMbrSq == sMbrSqVal){ //판매자이면
+    					myDealListHtml += '		<button type="button" class="btns-4" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailSell(this)">거래 계약 안내 및 상세</button>';
+    				}
+    				if(myDealList[i].buyMbrSq == sMbrSqVal){ //구매자이면
+    					myDealListHtml += '		<button type="button" class="btns-4" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailBuy(this)">거래 계약 안내 및 상세</button>';
+    				}
     				myDealListHtml += '	</div>';
     				myDealListHtml += '	<div class="myd-2">';
     				myDealListHtml += '		<div class="myd-te1">';
@@ -491,12 +501,12 @@ function myDealSearchList(){
 	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "1PW" && myDealList[i].dealSttsCd == "TC"){ //낙찰자이면서 1차 결제 대기 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>1차 결제를 진행해 주세요.';
 	    					myDealListHtml += '					<span>1차 결제 대기</span>';
-	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
+	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailBuy(this)">결제하기</button>';
 	    				}
 	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){ //낙찰자이면서 2차 결제 대기 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>2차 결제를 진행해 주세요.';
 	    					myDealListHtml += '					<span>2차 결제 대기</span>';
-	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
+	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailBuy(this)">결제하기</button>';
 	    				}
 	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){ //낙찰자이면서 2차 결제 완료 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>2차 결제가 완료되었습니다.';
@@ -505,7 +515,7 @@ function myDealSearchList(){
 	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){ //판매자이면서 2차 결제 완료 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>판매자 결제를 진행해주세요.';
 	    					myDealListHtml += '					<span>결제 대기</span>';
-	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
+	    					myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailSell(this)">결제하기</button>';
 	    				}
 	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){ //판매자이면서 2차 결제 완료 상태면
 	    					myDealListHtml += '					낙찰 되었습니다!!!<br>판매자 결제가 완료되었습니다.';
@@ -526,7 +536,7 @@ function myDealSearchList(){
 	    				if(myDealList[i].buyMbrSq == sMbrSqVal &&myDealList[i].buyPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					구매자 2차 결제 대기중입니다.';
 		    				myDealListHtml += '					<span>2차 결제 대기</span>';
-		    				myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
+		    				myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailBuy(this)">결제하기</button>';
 	    				}
 	    				if(myDealList[i].buyMbrSq == sMbrSqVal && myDealList[i].buyPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					구매자 2차 결제가 완료되었습니다.';
@@ -535,7 +545,7 @@ function myDealSearchList(){
 	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PW" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					판매자 결제를 대기중입니다.';
 		    				myDealListHtml += '					<span>결제 대기</span>';
-		    				myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetail(this)">결제하기</button>';
+		    				myDealListHtml += '				<button type="button" class="btns-2" dealSq="'+ myDealList[i].dealSq+'" onclick="myDealDetailSell(this)">결제하기</button>';
 	    				}
 	    				if(myDealList[i].sellMbrSq == sMbrSqVal && myDealList[i].sellPaymntSttsCd == "2PC" && myDealList[i].dealSttsCd == "TC"){
 	    					myDealListHtml += '					판매자 결제가 완료되었습니다.';
@@ -584,16 +594,18 @@ setInterval(function() {
 	}
 }, 1000);
 
-//거래 계약 안내 및 상세 페이지로 이동
-function myDealDetail(obj){
+//거래 계약 안내 및 상세 페이지 (구매자)로 이동
+function myDealDetailBuy(obj){
 	var dealSq = obj.getAttribute("dealSq");
-	var checked = $("input:radio[name='buyOrSell']:checked").val();
-	if(checked == "BUY"){
-		location.href="/myDealDetailBuy?dealSq="+dealSq+"&&mbrSq="+sMbrSqVal;
-	}else{
-		location.href="/myDealDetailSell?dealSq="+dealSq+"&&mbrSq="+sMbrSqVal;
-	}
+	location.href="/myDealDetailBuy?dealSq="+dealSq+"&&mbrSq="+sMbrSqVal;
 }
+
+//거래 계약 안내 및 상세 페이지 (판매자)로 이동
+function myDealDetailSell(obj){
+	var dealSq = obj.getAttribute("dealSq");
+	location.href="/myDealDetailSell?dealSq="+dealSq+"&&mbrSq="+sMbrSqVal;
+}
+
 
 //날짜 선택 버튼 클릭 시 날짜 자동 셋팅
 function searchOption_onclick(clickId){
