--- a/src/main/resources/static/css/common_pc.css
+++ b/src/main/resources/static/css/common_pc.css
@@ -4,7 +4,7 @@
 
 /* reset */
 html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,img{margin:0;padding:0;}
-html,body{width:100%;height:100%;font-family: 'Roboto Condensed', 'Noto Sans KR', sans-serif;color:#111111;letter-spacing:-0.2px;font-size: 10px;}
+html,body{width:100%;height:100%;font-family: 'Roboto Condensed', 'Noto Sans KR', sans-serif;color:#111111;letter-spacing:-0.2px;} /* font-size: 10px; */
 ul,ol,dl,li{list-style:none;}
 li{word-break:keep-all;}
 img,fieldset{border:0;vertical-align:middle;}
