--- a/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
+++ b/src/main/resources/templates/thymeleaf/fo/mgz/insights.html
@@ -55,17 +55,21 @@
 <!-- 모달검색 -->
 <!-- Modal -->
 <div class="modal fade modal-s" id="lp_mgz9Dtl" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style=" width: auto;">
-	<div class="modal-dialog modal-baeg max-w1200">
-		<div class="modal-content">
+	<div class="modal-dialog modal-baeg max-w1200 ">
+		<div class="modal-content ">
 			<div class="modal-header" style="padding: 0;min-height: 0;">
 				<div class="baegs">
 				    <div class="close" onclick="closeMgz9Dtl()"><img src="resources/img/ba/icon-end_1.png" /></div>
 				</div>
 			</div>
 			
-			<!-- 상세내용 -->
-			<div id="editor" class="ck-blurred ck ck-content ck-rounded-corners" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
-				<div class="modal-body pd60 h850-o" id="lp_mgz9Dtl_cntnt"></div>
+			<!-- 상세내용 font-size: 15px !important;-->
+			<div  style="display: flex;justify-content: center">
+			<div id="lp_mgz9Dtl_cntnt" style="max-width:810px;" class=" ck-blurred ck ck-content ck-rounded-corners" lang="en" dir="ltr" role="textbox" aria-label="Rich Text Editor, main" contenteditable="false">
+				
+<!-- 				<div class="modal-body pd60 h850-o" id="lp_mgz9Dtl_cntnt" style="font:inherit;"></div> -->
+				
+			</div>
 			</div>
 		</div>
 	</div>
@@ -78,6 +82,9 @@
 
 /* 파일업로드 */
 $(document).ready(function(){
+	
+	//$("#lp_mgz9Dtl_cntnt").removeAttr("style");	
+	
   var fileTarget = $('.filebox .upload-hidden');
   
 	fileTarget.on('change', function(){
