--- a/src/main/resources/static/css/ui_mo.css
+++ b/src/main/resources/static/css/ui_mo.css
@@ -5512,6 +5512,35 @@ p.dib{display:inline-block !important;}
 #myModal6 .check-info{}
 .terms-body{padding-top:5rem;}
 
+/* 0529 */
+.collsearch{width: 100%;max-width: 112rem;margin: 0 auto;display: table;}
+.collsearch .collsear-img{display: table-cell;width: 15rem;vertical-align: top;}
+.collsearch .collsear-img img{}
+.collsearch .collsear-text{display: table-cell;text-align: left;vertical-align: top;padding-left: 2.2rem;font-family: 'NOTO SANS KR';}
+.collsearch .collsear-text h2{font-size: 1.8rem;color: #fff;padding-bottom: 2rem;font-weight: 400;}
+.collsearch .collsear-text h3{font-size: 1.6rem;color: #fff;padding-bottom: 1.4rem;font-weight: 400;}
+.collsearch .collsear-text p{font-size: 1.5rem;color: #fff;font-weight: 400;}
+.collsul{max-width: 112rem;width: 100%;margin: 0 auto;padding-top: 2.5rem;}
+.collsul li{position: relative;padding: 3rem 7rem;}
+.collsul li:after{content:'';position: absolute;background-color: #fff;width: 103.5rem;height: 1px;left: 5rem;bottom: 0px;opacity: 0.13;}
+.collsul li:last-child{}
+.collsul li:last-child:after{content:''}
+.colls-i1{width: 15rem;height: 19.8rem;}
+.colls-i2{width: 15rem;height: 15rem;}
+
+
+.mab-den{position: fixed;bottom: 15px;width: 16rem;height: 163px;margin: 0 auto;}
+.mab-den .mden-1{padding-top: 3rem;position: relative;}
+.mab-den .mden-1 a{display: block;}
+.mab-den .mden-1 a img{display: block;margin: 0 auto;padding-bottom: 1.1rem;width: 1.5rem;}
+.mab-den .mden-1 a span{font-size: 1.4rem;color: #fff;font-weight: 600;}
+.mab-den .mden-2{padding-top: 3rem;}
+.mab-den .mden-2 a{}
+.mab-den .mden-2 a img{display: block;margin: 0 auto;padding-bottom: 1.1rem;width: 2.6rem;}
+.mab-den .mden-2 a span{font-size: 1.4rem;color: #fff;font-weight: 600;}
+
+.mab-den .mden-1:after{content:'';position: absolute;top: 0;width: 8rem;height: 1px;background-color: rgb(255 255 255 / 50%);left: 50%;transform: translateX(-50%);}
+
 
 /* 0607 */
 .is-sum{display:block;}
