--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5096,3 +5096,32 @@ position: relative;background-color: #fbfbfb;}
 .tstyle4 td{ color: #333333; font-size: 14px; font-weight: 600; /* padding-bottom: 30px; */border: #cdcdcd 1px solid;padding: 5px;}
 .tstyle4 tr:last-child th{padding-bottom:0;}
 .tstyle4 tr:last-child td{padding-bottom:0;}
+
+/* 0529 */
+.collsearch{width: 100%;max-width: 1120px;margin: 0 auto;display: table;}
+.collsearch .collsear-img{display: table-cell;width: 150px;vertical-align: top;}
+.collsearch .collsear-img img{}
+.collsearch .collsear-text{display: table-cell;text-align: left;vertical-align: top;padding-left: 22px;font-family: 'NOTO SANS KR';}
+.collsearch .collsear-text h2{font-size: 18px;color: #fff;padding-bottom: 20px;font-weight: 400;}
+.collsearch .collsear-text h3{font-size: 16px;color: #fff;padding-bottom: 14px;font-weight: 400;}
+.collsearch .collsear-text p{font-size: 15px;color: #fff;font-weight: 400;}
+.collsul{max-width: 1120px;width: 100%;margin: 0 auto;padding-top: 25px;}
+.collsul li{position: relative;padding: 30px 70px;}
+.collsul li:after{content:'';position: absolute;background-color: #fff;width: 1035px;height: 1px;left: 50px;bottom: 0px;opacity: 0.13;}
+.collsul li:last-child{}
+.collsul li:last-child:after{content:''}
+.colls-i1{width: 150px;height: 198px;}
+.colls-i2{width: 150px;height: 150px;}
+
+
+.mab-den{position: fixed;bottom: 15px;width: 112px;height: 163px;margin: 0 auto;}
+.mab-den .mden-1{padding-top: 30px;position: relative;}
+.mab-den .mden-1 a{display: block;}
+.mab-den .mden-1 a img{display: block;margin: 0 auto;padding-bottom: 11px;}
+.mab-den .mden-1 a span{font-size: 12px;color: #fff;font-weight: 600;}
+.mab-den .mden-2{padding-top: 30px;}
+.mab-den .mden-2 a{}
+.mab-den .mden-2 a img{display: block;margin: 0 auto;padding-bottom: 11px;}
+.mab-den .mden-2 a span{font-size: 12px;color: #fff;font-weight: 600;}
+
+.mab-den .mden-1:after{content:'';position: absolute;top: 0;width: 72px;height: 1px;background-color: rgb(255 255 255 / 50%);left: 50%;transform: translateX(-50%);}
