--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5105,7 +5105,7 @@ position: relative;background-color: #fbfbfb;}
 .collsearch .collsear-text h2{font-size: 18px;color: #fff;padding-bottom: 20px;font-weight: 400;}
 .collsearch .collsear-text h3{font-size: 16px;color: #fff;padding-bottom: 14px;font-weight: 400;}
 .collsearch .collsear-text p{font-size: 15px;color: #fff;font-weight: 400;}
-.collsul{max-width: 1120px;width: 100%;margin: 0 auto;padding-top: 25px;}
+.collsul{max-width: 1180px;width: 100%;margin: 0 auto;padding-top: 25px; height:560px; overflow:auto;}
 .collsul li{position: relative;padding: 30px 70px;}
 .collsul li:after{content:'';position: absolute;background-color: #fff;width: 1035px;height: 1px;left: 50px;bottom: 0px;opacity: 0.13;}
 .collsul li:last-child{}
