--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5125,3 +5125,6 @@ position: relative;background-color: #fbfbfb;}
 .mab-den .mden-2 a span{font-size: 12px;color: #fff;font-weight: 600;}
 
 .mab-den .mden-1:after{content:'';position: absolute;top: 0;width: 72px;height: 1px;background-color: rgb(255 255 255 / 50%);left: 50%;transform: translateX(-50%);}
+
+/* 0610 */
+.pb_10 {padding-bottom:10px;}
