SNS 네이버 로그인 체크 수정

--- a/src/main/resources/templates/thymeleaf/fo/about/customerService.html
+++ b/src/main/resources/templates/thymeleaf/fo/about/customerService.html
@@ -109,6 +109,9 @@
 									  border-radius: 15px;
 									}
 									
+									ul li { list-style-type : disc } /* 점으로 된 목록 */
+
+									
 							</style>
 							
 						
