--- a/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_left.jspf
@@ -71,10 +71,18 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
+            
               <li class="nav-item">
                 <a href="/admin/member/memberList" class="nav-link">
                   <i class="far fa-circle nav-icon sTitle"></i>
                   <p class="sTitle">정보조회</p>
+                </a>
+              </li>
+              
+              <li class="nav-item">
+                <a href="/admin/member/artistProList" class="nav-link">
+                  <i class="far fa-circle nav-icon sTitle"></i>
+                  <p class="sTitle">작가신청</p>
                 </a>
               </li>
               
